Fix search bar alignment issue

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,3 +1,7 @@
-.search-button {
-  width: 50px;
+.search-bar {
+  display: flex;
+  
+  .search-button {
+    width: 50px;
+  }
 }
